test/invalid/syntactic/duplicate_def_keyword.sysml
// INVALID: duplicate 'def' keyword
// EXPECTED: Parse error
part def def Vehicle { }
